--- a/update-form.html
+++ b/update-form.html
@@ -29,5 +29,9 @@
 	</div>
 </form>
 
+<!--Firebase boilerplate -->
+<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+<script src="js/patient-form.js"></script>
+
 </body>
 </html>
