Added code to add patient statuses to a FireStore DB

--- a/update-form.html
+++ b/update-form.html
@@ -31,6 +31,7 @@
 
 <!--Firebase boilerplate -->
 <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-firestore.js"></script>
 <script src="js/patient-form.js"></script>
 
 </body>
