--- a/update-form.html
+++ b/update-form.html
@@ -4,11 +4,16 @@
 	<title>Self-Report</title>
 </head>
 
- <!--Bootstrap boilerplate -->
+ <!--Bootstrap includes -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<!-- Date-time picker includes -->
+<script src="js/jquery.datetimepicker.full.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.min.css">
+
 
 <body>
 
@@ -22,6 +27,18 @@
 			<option>Other</option>
 		</select>
 	</div>
+	<div class="form-group">
+		<label for="dateTimePicker">Select the Time of Your Update</label>
+		<div class='input-group date' id='dateTime'>
+			<input type="text" id="datetimepicker3"/>
+		</div>
+		
+		<script type="text/javascript">
+			$('#datetimepicker3').datetimepicker({
+				inline:true
+			});
+		</script>
+    </div>
 	
 	<div class="form-group">
 		<label for="reportDetails">Details (Try to be as Specific as Possible)</label>
