--- a/update-view.html
+++ b/update-view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Self-Report</title>
+	<title>Report History</title>
 </head>
 
  <!--Bootstrap includes -->
@@ -10,16 +10,21 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+<!--Page specific includes -->
+<link rel="stylesheet" type="text/css" href="css/update-view.css">
+
 <body>
 <div class="container">
+<h1 class="text-center">Past Reports</h1>
 
-<h1 class="align-middle">All patient's updates go here</h1>
+<div id="statusContainer">
 
+</div>
 </div>
 
 <!--Firebase boilerplate -->
 <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-firestore.js"></script>
-<script src="js/patient-form.js"></script>
+<script src="js/update-view.js"></script>
 </body>
 </html>
