Allowed multiple selections in the calendar

--- a/vanilla-calendar-master/doctor.html
+++ b/vanilla-calendar-master/doctor.html
@@ -5,7 +5,7 @@
         <title>Schedule</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="src/css/vanilla-calendar-min.css">
-        <script src="src/js/vanilla-calendar-min.js"></script>
+        <script src="src/js/vanilla-calendar.js"></script>
     </head>
     <body>
         <div class="content">
