--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -66,6 +66,9 @@
         <!---------------------------------------------------------------------->
 
         <script>
+            let avail = [];
+            let unavail = [];
+
             let pastDates = true, availableDates = false, availableWeekDays = false
 
             let calendar = new VanillaCalendar({
@@ -73,23 +76,31 @@
                 months: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
                 shortWeekday: ['Sun', 'Mon', 'Tues', 'Wed', 'Thur', 'Fri', 'Sat'],
                 onSelect: (data, elem) => {
-                    // updates database 
-                     //if(this.classList.contains('vanilla-calendar-date--selected')){
-                      //   db.collection("users").doc(user.uid).set({
-                    //             name: user.displayName,
-                    //             email: user.email
-                    //         }).then(function () {
-                    //             console.log("New user added to firestore");
-                    //             window.location.assign("main.html");
-                    //         })
-                    //             .catch(function (error) {
-                    //                 console.log("Error adding new user: " + error);
-                    //             });
-					// }
-					// else{
-					// 	this.classList.add('vanilla-calendar-date--selected');
-					// }
+
                     console.log(data, elem);
+
+                    //grabs database and confirms appointment
+                    // let conf = [];
+                    // let check = db.collection("patient").doc("appointment");
+
+                    // for (let i = 0; i < avail.length; i++) {
+                    //     for (let j = 0; j < check.length; j++) {
+                    //         if (avail[i] == check[j]) {
+                    //             conf.push(avail[i]);
+                    //         }
+                    //     }
+                    // }
+
+                    // //updates database
+                    // let information = {
+                    //     availability: avail,
+                    //     unavailability: unavail,
+                    //     confirmed: conf
+                    // }
+                    // db.collection("doctor").doc(availability).set(information);
+
+
+
                 }
             })
 
