--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -62,7 +62,7 @@
 
 
         <!--------------------------------------------------------------------->
-        <!-- Make calls to your own JavaScript functions, here below-->
+        <!-- Calendar Setup code and Dates pushing-->
         <!---------------------------------------------------------------------->
 
         <script>
