--- a/schedule/patient.html
+++ b/schedule/patient.html
@@ -22,13 +22,13 @@
     <!------------------------>
     <!-- Your own CSS files -->
     <!------------------------>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="src/css/vanilla-calendar.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/vanilla-calendar.css">
 
     <!--------------------------------------------------------------------->
     <!-- JS files: Your own JavaScript functions included here    -->
     <!--------------------------------------------------------------------->
-    <script src="src/js/vanilla-calendar_patient.js"></script>
+    <script src="js/vanilla-calendar_patient.js"></script>
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-firestore.js"></script>
         <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-        <script src="src/js/firebase_api_ernest.js"> </script>
+        <script src="js/firebase_api_ernest.js"> </script>
 
 
         <!--------------------------------------------------------------------->
