--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -22,7 +22,7 @@
     <!------------------------>
     <!-- Your own CSS files -->
     <!------------------------>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="css/vanilla-calendar.css">
 
     <!--------------------------------------------------------------------->
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="container">
 
         <!----------------------->
         <!--  HTML Section -->
