Added 'Update Availability' button for doctors

--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -37,9 +37,10 @@
         <!----------------------->
         <!--  HTML Section -->
         <!----------------------->
-        <div class="area-buttons">
-        </div>
-        <div id="myCalendar" class="vanilla-calendar" style="margin-bottom: 20px"></div>
+        <div id="myCalendar" class="vanilla-calendar"></div>
+		<div class="area-buttons">
+			<button type="button" class="btn btn-primary">Update Availability</button>
+		</div>
 
         <!----------------------------------------------->
         <!-- JS: Boostrap, Firebase, API related    -->
