Added the ability to push availability data to FireBase

--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -39,7 +39,7 @@
         <!----------------------->
         <div id="myCalendar" class="vanilla-calendar"></div>
 		<div class="area-buttons">
-			<button type="button" class="btn btn-primary">Update Availability</button>
+			<button type="button" class="btn btn-primary" onclick="updateAvail()">Update Availability</button>
 		</div>
 
         <!----------------------------------------------->
