Link to schedule & conditions updated

--- a/update-form.html
+++ b/update-form.html
@@ -16,8 +16,9 @@
 
 
 <body>
-<div class="container">
 
+<!-- Navigation Bar -->
+<div class="container">
 <!--Patient status update form -->
 <form onsubmit="sendFormData()" action="javascript:void(0);">
 	<div class="form-group">
