--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Health Buddy</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-  <link rel = "stylesheet" href="css/style.css">
+    <title>Health Buddy</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-<!-- Navigation Bar -->
-<nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Health Buddy</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="schedule.html">Schedule</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Chat.html.html">Community</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="profile.html">Profile</a>
-          </li>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navigation Bar -->
+    <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Health Buddy</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="schedule/doctor.html">Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="update-form.html">Condition</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Chat.html">Community</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">Profile</a>
+                    </li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <!-- sign up container -->
-  <div id="jumbo" class="jumbotron">
-    <h1 id="jumbo-h" class="display-5">Hello, we appreciate your effort!</h1>
-    <p id="jumbo-p" class="lead">Provide scheduling & communication programs for healthcare workers.</p>
-    <a id="jumbo-btn" class="btn color btn btn-success btn-lg" href="login.html" role="button">Sign In!</a>
-  </div>
+    <!-- sign up container -->
+    <div id="jumbo" class="jumbotron">
+        <h1 id="jumbo-h" class="display-5">Hello, we appreciate your effort!</h1>
+        <p id="jumbo-p" class="lead">Provide scheduling & communication programs for healthcare workers.</p>
+        <a id="jumbo-btn" class="btn color btn btn-success btn-lg" href="login.html" role="button">Sign In!</a>
+    </div>
