--- a/Chat.html
+++ b/Chat.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- Navigation Bar -->
-  <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html">Health Buddy</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
