--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -32,42 +32,43 @@
 </head>
 
 <body>
-    <div class="container">
+	<!----------------------->
+	<!--  HTML Section -->
+	<!----------------------->
+	<!-- Navigation Bar -->
+<nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container">
+  <a class="navbar-brand" href="index.html">Health Buddy</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+	aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+	<ul class="navbar-nav ml-auto">
+	  <li class="nav-item active">
+		<a class="nav-link" href="../index.html">Home
+		  <span class="sr-only">(current)</span>
+		</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="doctor.html">Schedule</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="../update-form.html">Condition</a>
+	  <li class="nav-item">
+		<a class="nav-link" href="../Chat.html">Community</a>
+	  </li>
+	  <li class="nav-item">
+		<a class="nav-link" href="../profile.html">Profile</a>
+	  </li>
+	  </li>
+	</ul>
+  </div>
+</div>
+</nav>
 
-        <!----------------------->
-        <!--  HTML Section -->
-        <!----------------------->
-        <!-- Navigation Bar -->
-  <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+
     <div class="container">
-      <a class="navbar-brand" href="index.html">Health Buddy</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="../index.html">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="doctor.html">Schedule</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../update-form.html">Condition</a>
-          <li class="nav-item">
-            <a class="nav-link" href="../Chat.html">Community</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../profile.html">Profile</a>
-          </li>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
         <div id="myCalendar" class="vanilla-calendar"></div>
 		<div class="area-buttons">
 			<button type="button" class="btn btn-primary" onclick="updateAvail()">Update Availability</button>
