Menu bar now displays the history page for condition updates

--- a/schedule/doctor.html
+++ b/schedule/doctor.html
@@ -54,7 +54,10 @@
 		<a class="nav-link" href="doctor.html">Schedule</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="../update-form.html">Condition</a>
+		<a class="nav-link" href="../update-form.html">Update Condition</a>
+	<li class="nav-item">
+		<a class="nav-link" href="../update-view.html">Condition History</a>
+	  <li class="nav-item">
 	  <li class="nav-item">
 		<a class="nav-link" href="../Chat.html">Community</a>
 	  </li>
