--- a/update-view.html
+++ b/update-view.html
@@ -23,7 +23,7 @@
 
 <body>
 	<!-- Navigation Bar -->
-	<nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Health Buddy</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -41,7 +41,9 @@
 						<a class="nav-link" href="schedule/doctor.html">Schedule</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="update-form.html">Condition</a>
+						<a class="nav-link" href="update-form.html">Update Condition</a>
+					<li class="nav-item">
+						<a class="nav-link" href="update-view.html">Condition History</a>
 					<li class="nav-item">
 						<a class="nav-link" href="Chat.html">Community</a>
 					</li>
