--- a/Chat.html
+++ b/Chat.html
@@ -31,7 +31,9 @@
             <a class="nav-link" href="schedule/doctor.html">Schedule</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="update-form.html">Condition</a>
+            <a class="nav-link" href="update-form.html">Update Condition</a>
+		<li class="nav-item">
+			<a class="nav-link" href="update-view.html">Condition History</a>
           <li class="nav-item">
             <a class="nav-link" href="Chat.html">Community</a>
           </li>
