favicon for all pages updated

--- a/update-form.html
+++ b/update-form.html
@@ -13,6 +13,8 @@
 <!-- Date-time picker includes -->
 <script src="js/jquery.datetimepicker.full.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.min.css">
+<link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+<link rel="icon" href="image/favicon.ico" type="image/x-icon">
 
 
 <body>
