--- a/update-view.html
+++ b/update-view.html
@@ -20,6 +20,8 @@
 
 <!--Page specific includes -->
 <link rel="stylesheet" type="text/css" href="css/update-view.css">
+<link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+<link rel="icon" href="image/favicon.ico" type="image/x-icon">
 
 <body>
 	<!-- Navigation Bar -->
