--- a/Chat.html
+++ b/Chat.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/chat-style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="schedule/doctor.html">Schedule</a>
+            <a class="nav-link" href="schedule.html">Schedule</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="update-form.html">Update Condition</a>
