--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="schedule/doctor.html">Schedule</a>
+					<a class="nav-link" href="schedule.html">Schedule</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="update-form.html">Update Condition</a>
