--- a/schedule.html
+++ b/schedule.html
@@ -46,23 +46,23 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
 	<ul class="navbar-nav ml-auto">
 	  <li class="nav-item active">
-		<a class="nav-link" href="../index.html">Home
+		<a class="nav-link" href="index.html">Home
 		  <span class="sr-only">(current)</span>
 		</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="doctor.html">Schedule</a>
+		<a class="nav-link" href="schedule.html">Schedule</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="../update-form.html">Update Condition</a>
+		<a class="nav-link" href="update-form.html">Update Condition</a>
 	<li class="nav-item">
-		<a class="nav-link" href="../update-view.html">Condition History</a>
+		<a class="nav-link" href="update-view.html">Condition History</a>
 	  <li class="nav-item">
 	  <li class="nav-item">
-		<a class="nav-link" href="../Chat.html">Community</a>
+		<a class="nav-link" href="Chat.html">Community</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="../profile.html">Profile</a>
+		<a class="nav-link" href=".profile.html">Profile</a>
 	  </li>
 	  </li>
 	</ul>
