--- a/Chat.html
+++ b/Chat.html
@@ -82,7 +82,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-analytics.js"></script>
 
-  <script src="js/firebase.js"></script>
+  <script src="js/chat.js"></script>
 
 
 </body>
