Added the ability to clear the chat

--- a/Chat.html
+++ b/Chat.html
@@ -59,7 +59,7 @@
 	<input type="text" id="message-input">
 	<button type="button" class="btn btn-primary" id="send-button" onclick="writeData()">Send</button>
 	<!-- for debugging, remove later!-->
-	<button type="button" class="btn btn-primary" id="clearAll" onclick="db.remove()">Clear All Database</button>
+	<button type="button" class="btn btn-primary" id="clearAll" onclick="clearChat()">Clear All Database</button>
 	</form>
 	
 </div>
