--- a/mainPage1.html
+++ b/mainPage1.html
@@ -95,7 +95,7 @@
          data analysis of patients daily updates,
          community section between healthcare workers 
          </ul>
-         <button id ="btn1">Health Buddy</button>
+         <a href="homePage.html"> <button id ="btn1">Health Buddy</button></a>
          
      </p>
 <h2>Contact Us</h2>
