--- a/doctorLogin.html
+++ b/doctorLogin.html
@@ -62,17 +62,6 @@
 
 
     <script>
-        // This snippet goes at the JS section at the end of the body tag in "login.html"
-        // After firebase libraries via CDN are sourced
-        // After your firebase project API config is defined
-        // After the authentication container is created in HTML
-        // Meanwhile in firebase console, you need to 
-        // - create a project
-        // - know the api key config info
-        // - enable firestore
-        // - create rules to allow for read/write
-        // - enable authentication method (email/pwd signin)
-
         // Initialize the FirebaseUI Widget using Firebase.
         var ui = new firebaseui.auth.AuthUI(firebase.auth());
         var uiConfig = {
@@ -97,7 +86,7 @@
                               
                             }).then(function () {
                                 console.log("New user added to firestore");
-                                window.location.assign("mainPage.html");
+                                window.location.assign("index.html");
                             })
                             .catch(function (error) {
                                 console.log("Error adding new user: " + error);
@@ -115,29 +104,20 @@
             },
             // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
             signInFlow: 'popup',
-            signInSuccessUrl: 'mainPage.html',
+            signInSuccessUrl: 'index.html',
             signInOptions: [
-                // Leave the lines as is for the providers you want to offer your users.
-                //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                //firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-                //firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-                //firebase.auth.GithubAuthProvider.PROVIDER_ID,
                 firebase.auth.EmailAuthProvider.PROVIDER_ID,
-                //firebase.auth.PhoneAuthProvider.PROVIDER_ID
             ],
             // Terms of service url.
-            tosUrl: 'mainPage.html',
+            tosUrl: 'index.html',
             // Privacy policy url.
-            privacyPolicyUrl: 'mainPage.html',
+            privacyPolicyUrl: 'index.html',
             accountChooserEnabled: true
         };
+		
         // The start method will wait until the DOM is loaded.
         // Inject the login interface into the HTML
         ui.start('#firebaseui-auth-container', uiConfig);
-
-
-
-
 
     </script>
 
