Switched to patient logins and updated the style of the login page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div id="jumbo" class="jumbotron">
 	<h1 id="jumbo-h" class="display-5">Hello, we appreciate your effort!</h1>
 	<p id="jumbo-p" class="lead">Provide scheduling & communication programs for healthcare workers.</p>
-	<a id="jumbo-btn" class="btn color btn btn-success btn-lg" href="doctorLogin.html" role="button">Sign In!</a>
+	<a id="jumbo-btn" class="btn color btn btn-success btn-lg" href="patientLogin.html" role="button">Sign In!</a>
 </div>
     
 <script src="https://www.gstatic.com/firebasejs/7.9.2/firebase-app.js"></script>
