--- a/patientLogin.html
+++ b/patientLogin.html
@@ -23,7 +23,7 @@
     <!-- Your own CSS files -->
     <!------------------------>
     <link rel="stylesheet" href="css/login.css">
-
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 
 <body id="background">
