--- a/schedule.html
+++ b/schedule.html
@@ -64,7 +64,7 @@
 		<a class="nav-link" href="Chat.html">Community</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="ProfileDoctor.html">Profile</a>
+		<a class="nav-link" href="ProfilePatient.html">Profile</a>
 	  </li>
 	  </li>
 	</ul>
