--- a/update-form.html
+++ b/update-form.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.min.css">
 <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 <link rel="icon" href="image/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="css/update-view.css">
 
 
 <body>
@@ -45,7 +46,7 @@
 		<a class="nav-link" href="Chat.html">Community</a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="ProfileDoctor.html">Profile</a>
+		<a class="nav-link" href="ProfilePatient.html">Profile</a>
 	  </li>
 	  </li>
 	</ul>
